[package]
name = "copythat-secure-delete"
description = "Multi-pass secure deletion (DoD, Gutmann, Schneier, NIST 800-88) for Copy That v1.0.0."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
copythat-core = { path = "../copythat-core", version = "1" }
rand = "0.9"
thiserror = "2"
tokio = { version = "1", features = [
    "fs",
    "io-util",
    "macros",
    "rt",
    "rt-multi-thread",
    "sync",
    "time",
] }
walkdir = "2"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = [
    "fs",
    "io-util",
    "macros",
    "rt",
    "rt-multi-thread",
    "sync",
    "test-util",
    "time",
] }

# Phase 4 smoke test lives at the workspace root.
[[test]]
name = "phase_04_shred"
path = "../../tests/smoke/phase_04_shred.rs"
